<resources>
    <string name="app_name">NameBook</string>
    <string name="name">Enter a name</string>
    <string name="phoneNr">Enter a phone number</string>
    <string name="email">Enter an email address</string>
    <string name="shortText">Enter a short text</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="showDetails">Show details</string>
    <string name="remove">Remove</string>
    <string name="msg_save">User input saved</string>
</resources>
